--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,6 +107,7 @@
   "cSpell.words": [
     "Abstraktionslayer",
     "Assemblierung",
+    "autom",
     "auxf",
     "bashenv",
     "bashexports",
@@ -115,14 +116,17 @@
     "dircolors",
     "dotfilesctl",
     "Entf",
+    "hartcodiert",
     "Havariefall",
     "ifconfig",
     "libcolors",
     "libengine",
+    "libexample",
     "nanorc",
     "nosession",
     "notabbar",
     "pfad",
+    "stattdesssen",
     "upath",
     "Verknüpfungs",
     "Wrappern"
